--- a/styles/components/Footer.module.scss
+++ b/styles/components/Footer.module.scss
@@ -4,22 +4,49 @@
     border-top: 2px solid var(--primary);
     width: 85%;
     margin: 0 auto;
-    padding-top: 40px;
+    padding-top: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 1.2rem;
+    position: relative;
+    @media screen and (max-width: 500px) {
+      padding-top: 40px;
+    }
+    .odditty__name {
+      @media screen and (max-width: 500px) {
+        position: absolute;
+        top: -40px;
+      }
+    }
     .social__links {
       display: flex;
       align-items: center;
       gap: 20px;
+      @media screen and (max-width: 500px) {
+        //flex-direction: column;
+      }
       a {
+        :nth-child(1) {
+          @media screen and (max-width: 870px) {
+            display: none;
+          }
+        }
+        :nth-child(2) {
+          display: none;
+          @media screen and (max-width: 870px) {
+            display: block;
+          }
+        }
       }
     }
     .top__scroll__btn {
       position: relative;
       //   height: 100px;
       //   width: 100px;
+      @media screen and (max-width: 1100px) {
+        top: -20px;
+      }
       img {
         position: absolute;
         height: 250px;
@@ -27,6 +54,25 @@
         bottom: 0;
         right: 0;
         object-fit: contain;
+        transform: translateY(50%);
+        transition: transform 0.3s ease-in-out;
+
+        @media screen and (max-width: 1100px) {
+          height: 200px;
+          width: 200px;
+        }
+        @media screen and (max-width: 980px) {
+          height: 150px;
+          width: 150px;
+        }
+        @media screen and (max-width: 720px) {
+          height: 100px;
+          width: 100px;
+          bottom: 50%;
+        }
+        &:hover {
+          transform: translateY(45%);
+        }
       }
     }
   }
