--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -1,20 +1,33 @@
 .header {
-  @media screen and (max-width: 400px) {
-    display: none;
-  }
-  .container {
+  .nav__desktop__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-top: 10px;
     padding-bottom: 10px;
+    @media screen and (max-width: 700px) {
+      display: none;
+    }
   }
-  // .logo {
-  // }
-  ul {
+  .nav__logo {
+    position: relative;
+    z-index: 11;
+  }
+  .nav__links {
     display: flex;
     align-items: center;
     gap: 40px;
+    // @media screen and (max-width: 700px) {
+    //   background: var(--primary);
+    //   position: fixed;
+    //   z-index: 10;
+    //   width: 100%;
+    //   left: 0;
+    //   top: 0;
+    //   height: 40vh;
+    //   padding: 5%;
+    //   justify-content: center;
+    // }
     li {
       a {
         font-size: 1.2rem;
@@ -45,5 +58,121 @@
     border: 0;
     font-size: 1.5rem;
     cursor: pointer;
+    position: relative;
+    z-index: 10;
+    svg {
+      width: 4rem;
+      height: 4rem;
+      transition: all 1s linear;
+
+      path {
+        transition: all 2s linear, fill 0.3s linear;
+      }
+    }
+  }
+
+  ///mobile////
+
+  .nav__mobile__container {
+    display: none;
+    @media screen and (max-width: 700px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 10px;
+      padding-bottom: 10px;
+      position: fixed;
+      z-index: 999;
+      width: 100%;
+      transition: background 0.3s linear;
+      .nav__mob__btns {
+        display: flex;
+        align-items: center;
+        gap: 50px;
+      }
+      .ham__nav__toggle__btn {
+        position: relative;
+        height: 50px;
+        width: 40px;
+        background: transparent;
+        border: 0;
+        outline: 0;
+        z-index: 10;
+
+        &::after {
+          height: 2px;
+          width: 100%;
+          content: "";
+          background: var(--color-text);
+          position: absolute;
+          top: 25%;
+          left: 0;
+          transition: all 0.3s linear;
+        }
+        &::before {
+          position: absolute;
+          height: 2px;
+          width: 100%;
+          content: "";
+          background: var(--color-text);
+          top: 50%;
+          left: 0;
+          transition: all 0.3s linear;
+        }
+      }
+      .ham__nav__toggle__btn__active {
+        &::after {
+          transform: rotate(45deg);
+          top: 50%;
+          background: #fff;
+        }
+        &::before {
+          transform: rotate(-45deg);
+          background: #fff;
+        }
+      }
+      .nav__mobile__links {
+        position: absolute;
+        background: var(--primary);
+        z-index: 10;
+        width: 100%;
+        left: 0;
+        top: 0;
+        height: 40vh;
+        padding: 5%;
+        padding-top: 5vh;
+        //transform: translateY(-100%);
+        transition: transform 0.25s linear;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        ul {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100%;
+          gap: 30px;
+          flex-wrap: wrap;
+          li {
+            width: 40%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            a {
+              font-size: 1.3rem;
+              color: #fff;
+            }
+          }
+        }
+      }
+      // .nav__mobile__links__active {
+      //   transform: translateY(0);
+      // }
+    }
+  }
+  .nav__scroll__bg {
+    background: var(--bg-primary);
+    box-shadow: 0 4px 20px 4px rgba(0, 0, 0, 0.1);
   }
 }
