--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-top: 10vh;
+  padding-top: 10vh;
   @media screen and (max-width: 800px) {
     flex-direction: column;
     align-items: center;
