--- a/styles/components/Header.module.scss
+++ b/styles/components/Header.module.scss
@@ -141,12 +141,12 @@
         height: 40vh;
         padding: 5%;
         padding-top: 5vh;
-        //transform: translateY(-100%);
+        transform: translateY(-100%);
         transition: transform 0.25s linear;
         display: flex;
         justify-content: center;
         align-items: center;
-
+        //display: none;
         ul {
           display: flex;
           justify-content: center;
