--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,9 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-}
-
-:root {
+  transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
 }
 
 body,
